--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Document</title>
-<link rel="stylesheet" href="./css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<!-- <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <button id="startButton">Start</button>
@@ -15,6 +20,32 @@
 <form action="">
     <input type="text" id="name-input">
     <input type="text" id="color-input">
-</form>
+</form> -->
+<body>
+     <main>
+        <div class="container">
+            <section class="clicker">
+                <div class="cont-score">
+                <p class="score-p">Best Score</p>
+                <p class="score-num" id="bestScore">0</p>
+            </div>
+            <p class="timer" id="timer">0</p>
+            <div class="cont-sec">
+                <button class="sec-btn"  id="startButton">
+                <p class="sec-num">start</p>
+                </button>
+            </div>
+            <div class="cont-restart">
+                <button class="restart-btn" type="button" id="tryAgainButton">Try again</button>
+            </div>
+            <div class="cont-click">
+                <p class="click-p">Click per second</p>
+                <p class="click-num" id="clickPerSecond"></p>
+            </div>
+            </section>
+        </div>
+    </div>
+    </main> 
+<script src="./script.js"></script>
 </body>
 </html>
